# CppProjectTemplate

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  readme.md
.githooks/: pre-commit
.github/workflows/: linux.yml  release.yml  windows.yml
common/: CMakeLists.txt  Logging.cpp  Logging.hpp  Logging_Test.cpp  TestMain.cpp  logging.cpp  logging.hpp  logging_test.cpp  main_test.cpp
docs/: doxyfile
docs/doxygen/: _complex_8cpp.html  _complex_8cpp_source.html  _complex_8hpp.html  _complex_8hpp_source.html  _fractal_8cpp.html  _fractal_8cpp.js  _fractal_8cpp_source.html  _fractal_8hpp.html  _fractal_8hpp_source.html  _logging_8cpp.html  _logging_8cpp.js  _logging_8cpp_source.html  _logging_8hpp.html  _logging_8hpp.js  _logging_8hpp_source.html  _version_8h.html  _version_8h_source.html  annotated.html  annotated_dup.js  classes.html  classfractal_1_1_fractal-members.html  classfractal_1_1_fractal.html  classfractal_1_1math_1_1_complex-members.html  classfractal_1_1math_1_1_complex.html  dir_163769b32a4b7d191bbc38b541e563b3.html  dir_163769b32a4b7d191bbc38b541e563b3.js  dir_2258931afb00e25dcb84c5e9d997849f.html  dir_2258931afb00e25dcb84c5e9d997849f.js  dir_adb200caec99cdc9b10ab9e02000aae0.html  dir_adb200caec99cdc9b10ab9e02000aae0.js  dir_bdd9a5d540de89e9fe90efdfc6973a4f.html  dir_bdd9a5d540de89e9fe90efdfc6973a4f.js  doxygen-style.css  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  (+30 more)
docs/templates/: .gitignore  doxygen-footer.html  doxygen-header.html  index.html
doxygen/: _complex_8cpp.html  _complex_8cpp_source.html  _complex_8hpp.html  _complex_8hpp_source.html  _fractal_8cpp.html  _fractal_8cpp_source.html  _fractal_8hpp.html  _fractal_8hpp_source.html  _logging_8cpp.html  _logging_8cpp_source.html  _logging_8hpp.html  _logging_8hpp_source.html  _version_8h.html  _version_8h.js  _version_8h_source.html  annotated.html  classes.html  classfractal_1_1_fractal-members.html  classfractal_1_1_fractal.html  classfractal_1_1_fractal.js  classfractal_1_1math_1_1_complex-members.html  classfractal_1_1math_1_1_complex.html  classfractal_1_1math_1_1_complex.js  complex_8cpp.html  complex_8cpp__incl.map  complex_8cpp__incl.md5  complex_8cpp_source.html  complex_8hpp.html  complex_8hpp__dep__incl.map  complex_8hpp__dep__incl.md5  complex_8hpp_source.html  dir_000003_000000.html  dir_000004_000000.html  dir_000004_000001.html  dir_000004_000005.html  dir_000006_000001.html  dir_1274cdc9388515bcf889735abdbc1684.html  dir_1274cdc9388515bcf889735abdbc1684.js  dir_163769b32a4b7d191bbc38b541e563b3.html  dir_163769b32a4b7d191bbc38b541e563b3.js  (+110 more)
installer/: CMakeLists.txt  main.cpp
installer-win/: CMakeLists.txt  main.cpp  main.rc
libraries/: CMakeLists.txt
libraries/miniz/: miniz.c  miniz.h
module/: CMakeLists.txt  Fractal.cpp  Fractal.hpp  Module.hpp
module/math/: CMakeLists.txt  Complex.cpp  Complex.hpp
project-fractal/: CMakeLists.txt  Fractal.cpp  Fractal.hpp  Fractal_win32.rc  fractal.cpp  fractal.hpp  fractal_win32.rc  main_unix.cpp  main_win.cpp
project-fractal/math/: CMakeLists.txt  Complex.cpp  Complex.hpp  Complex_Test.cpp  complex.cpp  complex_test.cpp
project-installer/: .gitignore  CMakeLists.txt  Installer.h  Installer_win32.cpp  Installer_win32.rc  Resources.h  installer_win32.rc  main.cpp  main_unix.cpp  main_win.cpp
project-library/: CMakeLists.txt  library_test.cpp
tools/: CMakeLists.txt  Clang-TidyFormat.py  ClangFormat.py  CreateVersionFromGitTag.py  GetVersionFromGitTag.cmake  SetupProject.py  Template.py  UpdateDoxygen.py
tools/templates/: CMakeLists.txt  CMakeListsLibraries.txt  library.cpp  library.h  main_unix.cpp  main_win.cpp
